# maestro-blocks

./: .gitignore  AGENTS.md  AUDIO_INTEGRATION.md  DESIGN_SYSTEM.md  index.html  package.json  tauri-dev.sh  tsconfig.json  vite.config.ts
.cargo/: .crates.toml  .crates2.json
.claude/: CLAUDE.md
.claude/commands/: session-review.md
src/: App.svelte  App.tsx  app.css  index.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json  test_chord_output
src-tauri/capabilities/: default.json
src-tauri/resources/samples/: README.md
src-tauri/src/: main.rs
src-tauri/src/audio/: engine.rs  envelope.rs  mod.rs  monitor.rs  samples.rs
src-tauri/src/commands/: audio.rs  export.rs  lilypond.rs  mod.rs  music.rs  worksheet.rs
src-tauri/src/music/: chords.rs  interval_encoding.rs  intervals.rs  mod.rs  notes.rs  roman.rs  types.rs  voice_leading.rs
src-tauri/src/types/: mod.rs  worksheet.rs
src/lib/: theme.svelte.ts
src/lib/components/: Canvas.svelte  ChordEditorPopup.tsx  ChordNamingGenerator.svelte  ChordNamingGenerator.tsx  ChordPalette.svelte  ChordPalette.tsx  EditableHeader.tsx  MusicBlock.svelte  ScoreCanvas.svelte  ScoreCanvas.tsx  Sidebar.svelte  Sidebar.tsx  WorksheetModeSidebar.tsx  WorksheetViewer.svelte  WorksheetViewer.tsx
src/lib/hooks/: useTheme.ts
src/lib/services/: export.ts  music.ts  verovio.ts  vexflow.ts
src/lib/stores/: canvas.ts  score.ts  worksheet.ts  worksheetSettings.ts
src/lib/styles/: design-system.css
src/lib/types/: blocks.ts  score.ts  verovio.d.ts  worksheet.ts
src/lib/utils/: debounce.ts  notation-templates.ts  (+4 more)
