[package]
name = "maestro-blocks"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.1.1", features = [] }

[dependencies]
tauri = { version = "2.1.1", features = ["devtools"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempfile = "3.8"
uuid = { version = "1.0", features = ["v4"] }
once_cell = "1.19"
thiserror = "1.0"
rodio = { version = "0.21", features = ["vorbis"] }

# Tauri plugins for native dialogs and file system
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"

# SVG to PDF conversion
svg2pdf = "0.12"
usvg = "0.43"
resvg = "0.43"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
